[project]
name = "pagersim-openenv"
version = "1.0.0"
description = "SRE Incident Response simulation environment for AI agent training"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kurru" }
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.7.4",
    "openai==1.54.0",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "gradio==4.44.1",
    "huggingface_hub==0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
