[project]
name = "pagersim-openenv"
version = "1.0.0"
description = "SRE Incident Response simulation environment for AI agent training"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kurru" }
]
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.7.4",
    "openai>=2.7.2",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "gradio>=5.0.0",
    "huggingface_hub>=0.28.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "server*", "baseline*", "environment*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
